# Haskell-OpenGL-Tutorial

./: .travis.yml  README.md
Boilerplate/: Main.hs  README.md
Boilerplate/Shaders/: shader.frag
HelloWindow/: HelloWindow.cabal  README.md  stack.yaml
HelloWindow/app/: Main.hs
Mandelbrot/: Main.hs  Makefile  Mandelbrot.cabal  README.md  run.sh
Mandelbrot-FRP/: #Main.hs#  Main.hi  Main.hs  README.md  TAGS
Mandelbrot-FRP-cabalized/: CHANGELOG.md  LICENSE  Mandelbrot-FRP-cabalized.cabal  README.md
Mandelbrot-FRP-cabalized/app/: Main.hs
Mandelbrot-FRP-cabalized/src/Graphics/RedViz/: GLUtil.hs
Mandelbrot-FRP-io-glfw-b/: Main.hs  README.md
Mandelbrot-FRP-io-sdl2/: Input.hs  Main.hs  Makefile  README.md  Types.hs
Mandelbrot-FRP-io-sdl2-cabalized/: CHANGELOG.md  Mandelbrot-FRP-io-sdl2-cabalized.cabal
Mandelbrot-FRP-io-sdl2-cabalized/Shaders/: shader.frag
Mandelbrot-FRP-io-sdl2-cabalized/app/: Main.hs
Mandelbrot-FRP-io-sdl2.ip/: Input.hs  Main.hs  Makefile  README.md
Mandelbrot-FRP-io-sdl2.ip/NGL/: LoadShaders.hs
Mandelbrot-FRP-sdl2/: Main.hs
Mandelbrot-FRP/NGL/: LoadShaders.hi  Notes.org
Mandelbrot-FRP/NGL/NGL/NGL/NGL/NGL/NGL/NGL/: clean
Mandelbrot-FRP/NGL/NGL/NGL/NGL/NGL/NGL/NGL/NGL/: Rendering.hi
Mandelbrot-FRP/Shaders/: #shader.frag#  shader.frag
Mandelbrot.make/: Main.hs  Makefile  README.md
Mandelbrot/NGL/: LoadShaders.hi
Mandelbrot/NGL/NGL/NGL/NGL/NGL/NGL/NGL/NGL/NGL/NGL/NGL/NGL/NGL/NGL/NGL/NGL/NGL/NGL/NGL/NGL/NGL/NGL/NGL/NGL/NGL/NGL/NGL/NGL/NGL/NGL/NGL/NGL/: Shape.hi
Mandelbrot/NGL/NGL/NGL/NGL/NGL/NGL/NGL/NGL/NGL/NGL/NGL/NGL/NGL/NGL/NGL/NGL/NGL/NGL/NGL/NGL/NGL/NGL/NGL/NGL/NGL/NGL/NGL/NGL/NGL/NGL/NGL/NGL/NGL/NGL/NGL/NGL/NGL/: LoadShaders.hi
Mandelbrot/NGL/NGL/NGL/NGL/NGL/NGL/NGL/NGL/NGL/NGL/NGL/NGL/NGL/NGL/NGL/NGL/NGL/NGL/NGL/NGL/NGL/NGL/NGL/NGL/NGL/NGL/NGL/NGL/NGL/NGL/NGL/NGL/NGL/NGL/NGL/NGL/NGL/NGL/NGL/NGL/NGL/: Linear.hs
Mandelbrot/Shaders/: shader.frag  shader.vert
Mandelbrot/app/: Main.hs
MandelbrotViewer/: LICENSE  MandelbrotYampa.cabal  README.md  run.sh
MandelbrotViewer/app/: Main.hs  Test.hs
MandelbrotViewer/src/: Input.hs
MandelbrotViewerDIG/: MandelbrotYampa.cabal  README.md
MandelbrotViewerDIG/app/: Main.hs  scratch
MandelbrotViewerDIG/src/: Graphics
MandelbrotViewerDIG/src/Graphics/: RedViz.hs
MandelbrotViewerDIG/src/Graphics/RedViz/: Camera.hs  Controllable.hs  Descriptor.hs  FromVector.hs  Material.hs  Project.hs  Rendering.hs  Texture.hs  VAO.hs  Widget.hs
MandelbrotViewerDIG/src/Graphics/RedViz/GLUtil/: JuicyTextures.hs  Textures.hs
MandelbrotViewerDIG/src/Graphics/RedViz/Input/: Mouse.hs
MandelbrotViewerDIG/src/Graphics/RedViz/Input/FRP/: Yampa.hs
MandelbrotViewerDIG/src/Graphics/RedViz/Input/FRP/Yampa/: AppInput.hs
MandelbrotViewerDIG/src/Graphics/RedViz/Project/: GUI.hs  Model.hs  Project.hs
MandelbrotViewerDIGRes/: MandelbrotYampa.cabal  README.md  imgui.ini  stack.yaml
MandelbrotViewerDIGRes/app/: Main.hs  MainDIG.hs
MandelbrotViewerDIGRes/mat/share/: hg_sdf.glsl  lib.glsl
MandelbrotViewerDIGRes/src/: LoadShaders.hs
MandelbrotViewerDIGRes/src/Graphics/RedViz/: Backend.hs  Drawable.hs  Input.hs  LoadShaders.hs  Object.hs  PGeo.hs  Primitives.hs  Utils.hs
MandelbrotViewerDIGRes/src/Graphics/RedViz/GLUtil/: TypeMapping.hs
MandelbrotViewerDIGRes/src/Graphics/RedViz/Input/: Keyboard.hs
MandelbrotViewerDIGRes/src/Graphics/RedViz/Input/FRP/Yampa/: Update.hs
MandelbrotViewerDIGRes/src/Graphics/RedViz/Input/FRP/Yampa/Update/: Keyboard.hs  Mouse.hs
MandelbrotViewerDIGRes/src/Graphics/RedViz/Project/: Utils.hs
MandelbrotYampa/: MandelbrotYampa.cabal  README.md  stack.yaml
MandelbrotYampa/Shaders/: shader.frag  shader.vert
MandelbrotYampa/app/: Input.hs  Main.hs  scratch
MandelbrotYampa/src/: Input.hs
Read_Model-FRP-io-sdl2/: Main.hs  Makefile  geoParser.py
Transformations/: README.md  Transformations.cabal  run.sh  stack.yaml
Transformations/app/: Main.hs
dynamic_transformation/: Main.hs  Object.hs
dynamic_transformation/Shaders/: shader.frag  shader.vert
element_buffer/: Main.hs  README.md  junk.hs  junk2.hs
element_buffer/NGL/: TinyMath
element_buffer/Shaders/: shader.frag  shader.vert
minimumBoilerplate/: Main.hs  README.md
minimumBoilerplate/Shaders/: shader.frag  shader.vert
rectangle_with_texture_blending/: Main.hs  Makefile
rectangle_with_texture_blending/Shaders/: shader.frag  shader.vert
tutorial00/: Main.hs  README  README.md
tutorial00-cabalized/: CHANGELOG.md  tutorial00-cabalized.cabal
tutorial01/: Main.hs  README  README.md
tutorial02/: Main.hs  README  README.md  shader.frag  shader.vert
tutorial03/: LoadShaders.hi  LoadShaders.hs  Main.hs  Makefile  README  README.md  Shape.hs  Shape.sh  dump.hs  tags
tutorial03/HNGL/: Data.hs  Maths.hs  Rendering.hs
tutorial03/NGL/: .dump.hs  Data.hs  LoadShaders.hs  Maths.hs  Rendering.hs  Shape.hs  TinyMath.hs  Utils.hs  tags
tutorial03/TinyMath/: TinyMath.hs
tutorial04/: .dump  Main.hi  Main.hs  README.md  TAGS
tutorial04/HNGL/: #TAGS#  Data.hs  Data.hs~  LoadShaders.hi  Rendering.hi  Rendering.hs  Rendering.hs~  TAGS
tutorial04/NGL/: LoadShaders.hs  Rendering.hs  Shape.hs
tutorial04/Shaders/: triangles.frac  triangles.vert
tutorial05/: Main.hs  Main.hs~  README.md
tutorial05/HNGL/: Data.hi  Data.hs  Data.hs~  Rendering.hs  Rendering.hs~
tutorial05/NGL/: LoadShaders.hs  Rendering.hs  Shape.hs
tutorial06/: Main.hs  README.md  RiemmanSpiral.hs
tutorial06/NGL/: Rendering.hs  Utils.hs
tutorial07/: Main.hs  README.md  TinyMath
tutorial08/: Main.hs  README.md
tutorial09/: Main.hs  NGL  README.md
tutorial10/: Main.hs  README.md
tutorial10/NGL/: LoadShaders.hi  NGL  Rendering.hi  Rendering.hs  Shape.hi  Shape.hs  Test.hs  Utils.hi  Utils.hs
tutorial10/Shaders/: shader.vert  triangles.vert
tutorial11/: Main.hs  README.md
tutorial11/NGL/: Rendering.hs  Shape.hs
tutorial11/TinyMath/: README.md  TinyMath.hs
tutorial12/: README.md
tutorial12/NGL/: NGL  Rendering.hs  Shape.hs
tutorial12/Shaders/: triangles.frac
(+2 files in other folders)
