name:                HelloWindow
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/madjestic/HelloWindow#readme
license:             BSD3
license-file:        LICENSE
author:              Vladimir Lopatin
maintainer:          madjestic13@gmail.com
copyright:           Vladimir Lopatin
category:            graphics
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable HelloWindow
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , OpenGL >= 3.0 && < 4
                     , GLFW-b
  default-language:    Haskell2010
