cabal-version:        3.0
name:                 Mandelbrot-FRP-cabalized
version:              0.2.0.0
license:              BSD-3-Clause
license-file:         LICENSE
author:               madiestic
maintainer:           madjestic13@gmail.com
copyright:            Vladimir Lopatin
extra-source-files:   CHANGELOG.md

executable Mandelbrot
    main-is:          Main.hs
    other-modules:
                      Graphics.RedViz.GLUtil
    build-depends:    base ^>=4.16.4.0
                    , OpenGL
                    , linear
                    , array
                    , bytestring
                    , vector
                    , JuicyPixels
                    , text
                    , Yampa
                    , GLFW-b
    hs-source-dirs:   app
                    , src
    default-language: Haskell2010
