name:                Transformations
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/madjestic/Transformations#readme
license:             BSD3
license-file:        LICENSE
author:              Vladimir Lopatin
maintainer:          madjestic13@gmail.com
copyright:           Vladimir Lopatin
category:            graphics
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     LoadShaders
  build-depends:       base >= 4.7 && < 5
                     , bytestring >= 0.10.8.1
                     , OpenGL >= 3.0 && < 4
  default-language:    Haskell2010
                     
executable Transformations
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , GLFW-b
                     , OpenGL >= 3.0 && < 4
                     , GLUtil >= 0.9.2
                     , Transformations
  default-language:    Haskell2010

test-suite Transformations-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , Transformations
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/madjestic/Transformations
